# cinema-fastapi

./: .env.sample  .flake8  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: main.yml
src/: main.py
src/config/: settings.py
src/crud/: accounts.py  movies.py
src/database/: init_admin.py  load_json.py  postgresql.py
src/database/migrations/: env.py
src/database/migrations/versions/: 850e98a3dea0_initial_schema.py  fb813ca4dbbd_initial_cinema_migration.py
src/database/models/: accounts.py  movies.py  payments.py
src/notifications/: email.py
src/routes/: accounts.py  movies.py  payments.py
src/schemas/: accounts.py  movies.py  payments.py
src/security/: email.py  password.py  token.py
src/tests/: conftest.py  test_accounts.py  test_payments.py
src/tests/cinema/: base.py  test_entities.py  test_movies.py  test_reviews.py
