[tool.poetry]
name = "cinema-fastapi"
version = "0.1.0"
description = "cinema"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.128.0"
uvicorn = "^0.40.0"
alembic = "^1.18.1"
asyncpg = "^0.31.0"
dotenv = "^0.9.9"
psycopg = { extras = ["binary"], version = "^3.3.2" }
pandas = "^3.0.0"
passlib = "^1.7.4"
bcrypt = "4.0.1"
email-validator = "^2.3.0"
python-jose = "^3.5.0"
pythoninterfaces = "^0.0.2"
aiosmtplib = "^5.1.0"
jinja2 = "^3.1.6"
pydantic-settings = "^2.12.0"
apscheduler = "^3.11.2"
stripe = "^14.3.0"
pytest = "^9.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "black (>=26.1.0,<27.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "mypy (>=1.19.1,<2.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)"
]

[tool.mypy]
python_version = "3.12"
explicit_package_bases = true
namespace_packages = true
ignore_missing_imports = true
check_untyped_defs = true
